--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-	<meta name="description" content="My name is Kamil Ramazanov, i am a frontend developer. Biography, skills, fields of expertise, portfolio, contacts">
+	<meta name="description" content="My name is Kamil Ramazanov, i am a frontend developer. Biography, skills, fields of expertise, portfolio and contacts are here">
 	<meta name="yandex-verification" content="2953db0372371439" />
 
 	<title>Jellgrum | Kamil Ramazanov</title>
@@ -34,7 +34,7 @@
 
 			<section>
 				<div class="spacer100"></div>
-				<p>Hi, my name is <b>Kamil' Ramazanov</b>. I am a <b>front-end software developer</b> working for <a href="https://infotech.group/" target="_blank" rel="noreferrer">Infotech Group</a>, in Kazan, Russia.</p>
+				<p>Hi, my name is <b>Kamil Ramazanov</b>. I am a <b>front-end software developer</b> working for <a href="https://maxima.life/" target="_blank" rel="noreferrer">Maxima</a>, in Kazan city, Russia.</p>
 				<div class="spacer100"></div>
 			</section>
 
@@ -55,6 +55,7 @@
 						<ul>
 							<li>React.js</li>
 							<li>Redux</li>
+							<li>MobX</li>
 							<li>Jquery</li>
 						</ul>
 					</div>
@@ -78,7 +79,6 @@
 							<li>npm</li>
 							<li>Webpack</li>
 							<li>Gulp</li>
-							<li>Parcel</li>
 						</ul>
 					</div>
 				</div>
@@ -124,20 +124,24 @@
 			<section>
 				<h2>Experience</h2>
 
+				<h3><a href="https://maxima.life/" target="_blank" rel="noreferrer">Maxima</a></h3>
+				<time>July 2020 - is up to date</time>
+				<hr>
+
 				<h3><a href="https://infotech.group/" target="_blank" rel="noreferrer">Infotech Group</a></h3>
-				<time>April 2019 - up to date</time>
+				<time>April 2019 - July 2020</time>
 				<hr>
 
 				<h3><a href="https://mytona.com/" target="_blank" rel="noreferrer">MyTona</a></h3>
 				<time>February 2018 - March 2019 (1 year 1 month)</time>
 				<hr>
 
-				<h3>Digital Coach</h3>
-				<time>July 2017 - October 2017 (4 months)</time>
-				<hr>
-
 				<h3>Freelance</h3>
 				<time>October 2017 - January 2018 (4 months)</time>
+				<hr>
+
+				<h3>Digital Coach</h3>
+				<time>July 2017 - October 2017 (4 months)</time>
 			</section>
 		</section>
 
@@ -146,53 +150,14 @@
 			<h1>Portfolio</h1>
 
 			<section>
-				<h2>Commercial projects:</h2>
+				<h2>Some commercial projects:</h2>
 
 				<h3><a href="https://mytona.com/" target="_blank" rel="noreferrer">MyTona</a></h3>
 				<p>Russian developer and publisher of mobile free-to-play games</p>
 				<hr>
 
-				<h3><a href="https://mytona.com/darkwood-quiz" target="_blank" rel="noreferrer">Darkwood Quiz</a></h3>
-				<p>The quiz that will determine which Seekers Notes character you are</p>
-				<hr>
-
 				<h3><a href="https://cgxpyakutsk.com/" target="_blank" rel="noreferrer">MyTona CG eXPo</a></h3>
 				<p>Republican competition for 2D artists and 3D modelers</p>
-				<hr>
-
-				<h3><a href="https://credits.albank.ru/" target="_blank" rel="noreferrer">Diamond bank. Сredits</a></h3>
-				<p>Joint stock commercial bank in republic of Sakha (Yakutia)</p>
-				<hr>
-
-				<h3><a href="http://artsakha.ru/" target="_blank" rel="noreferrer">ArtSakha</a></h3>
-				<p>Sculptural workshop in republic of Sakha (Yakutia)</p>
-				<hr>
-
-				<h3><a href="http://opt.tuneft.ru/" target="_blank" rel="noreferrer">Tuymaada Oil</a></h3>
-				<p>Open joint stock oil company in republic of Sakha (Yakutia)</p>
-			</section>
-
-			<section>
-				<h2>Home projects:</h2>
-
-				<h3><a href="https://ramazanovkamil.me/cities" target="_blank" rel="noreferrer">Cities</a></h3>
-				<p>Playing in the cities for two players on React.js</p>
-				<hr>
-
-				<h3><a href="https://github.com/jellgrum/apples-db">Apples DB</a></h3>
-				<p>Store of any data on React.js with fake server</p>
-				<hr>
-
-				<h3><a href="https://ramazanovkamil.me/clock" target="_blank" rel="noreferrer">Clock on CSS</a></h3>
-				<p>Analog and digital clocks on pure CSS and Javascript</p>
-				<hr>
-
-				<h3><a href="https://ramazanovkamil.me/canvas-paint" target="_blank" rel="noreferrer">Paint on canvas</a></h3>
-				<p>Draw on canvas</p>
-				<hr>
-
-				<h3><a href="https://ramazanovkamil.me/tick-tack-toe" target="_blank" rel="noreferrer">Tick Tack Toe</a></h3>
-				<p>The game of tic-tac-toe on React.js and CSS Grid</p>
 			</section>
 		</section>
 
@@ -215,9 +180,9 @@
 					<div class="six columns">
 						<p><b>Education:</b></p>
 						<ul>
-							<li><a href="https://ru.hexlet.io/u/jellgrum?ref=jellgrum" target="_blank" rel="noreferrer">Hexlet</a></li>
-							<li><a href="https://htmlacademy.ru/profile/jellgrum" target="_blank" rel="noreferrer">HTMLAcademy</a></li>
+							<li><a href="https://hexlet.io/u/jellgrum" target="_blank" rel="noreferrer">Hexlet</a></li>
 							<li><a href="https://www.hackerrank.com/jellgrum" target="_blank" rel="noreferrer">HackerRank</a></li>
+							<li><a href="https://htmlacademy.ru/profile/jellgrum" target="_blank" rel="noreferrer">HTMLAcademy</a></li>
 						</ul>
 					</div>
 				</div>
